--- a/WebContent/page.html
+++ b/WebContent/page.html
@@ -7,16 +7,20 @@
     <link href="style/style.css" rel="stylesheet">
     <script type="text/javascript" src="lib/jquery/dist/jquery.js"></script>
     <script type="text/javascript" src="js/script.js"></script>
+    <script src="https://maps.googleapis.com/maps/api/js"></script>
 </head>
 <body>
     <!-- Navigation -->
-    <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+    <nav class="navbar navbar-default navbar-fixed-top" role="navigation">
         <div class="container">
             <!-- Brand and toggle get grouped for better mobile display -->
             <div class="navbar-header">
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
                 </button>
-                <a class="navbar-brand" href="#">Snaptown</a>
+                <a href="index.html">
+                  <img src="img/log.png" id="logo-img"/>
+                </a>
+                <!-- <a class="navbar-brand" href="#">Snaptown</a> -->
             </div>
 
             <ul class="nav navbar-nav navbar-right">
@@ -111,48 +115,63 @@
     <div class="container">
         <h1 class="page-header" style="margin-top: 75px;">Page Heading </h1>
         <div class="row">
-            <img class="img-responsive" src="img/2.jpg" class="image-in-page" alt="">
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ea delectus molestiae maiores quasi perferendis excepturi suscipit ex quos ducimus aspernatur. A similique magni aspernatur inventore accusamus, doloribus odit. Delectus culpa unde cupiditate perspiciatis soluta nobis nemo nulla enim doloribus voluptates nesciunt, illo esse nihil voluptatum iste fuga modi voluptas voluptate dolorum maiores quam dolorem. Incidunt, sunt reiciendis consequatur nisi aspernatur aperiam delectus ipsum dolorum veniam, quasi quidem possimus optio ab atque modi velit ad eum deserunt consequuntur perferendis veritatis debitis nobis dolores? Dicta cumque, eaque doloribus voluptatem exercitationem illum nam ipsum, quidem tempora fuga nesciunt dolore officiis veritatis quas ullam quia, commodi, qui expedita! Quaerat ab iusto dignissimos at quas expedita corporis dicta iste vero, architecto corrupti facere, repudiandae aut, necessitatibus cupiditate unde deserunt. Animi quis aperiam voluptas, accusamus quia enim nesciunt facere facilis vitae dolorum ea temporibus non dolore labore, perspiciatis quisquam nemo omnis architecto, amet consectetur at possimus.</p>
+            <img class="img-responsive image-in-page" src="img/2.jpg" alt="">
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ea delectus molestiae maiores quasi perferendis excepturi suscipit ex quos ducimus aspernatur. A similique magni aspernatur inventore accusamus, doloribus odit. Delectus culpa unde cupiditate perspiciatis soluta nobis nemo nulla enim doloribus voluptates nesciunt, illo esse nihil voluptatum iste fuga modi voluptas voluptate dolorum maiores quam dolorem. Incidunt, sunt reiciendis consequatur nisi aspernatur aperiam delectus ipsum dolorum veniam, quasi quidem possimus optio ab atque modi velit ad eum deserunt consequuntur perferendis veritatis debitis nobis dolores? Dicta cumque, eaque doloribus voluptatem exercitationem illum nam ipsum, quidem tempora fuga nesciunt dolore officiis veritatis quas ullam quia, commodi, qui expedita! Quaerat ab iusto dignissimos at quas expedita corporis dicta iste vero, architecto corrupti facere, repudiandae aut, necessitatibus cupiditate unde deserunt. Animi quis aperiam voluptas, accusamus quia enim nesciunt facere facilis vitae dolorum ea temporibus non dolore labore, perspiciatis quisquam nemo omnis architecto, amet consectetur at possimus. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Possimus libero eos, itaque excepturi vitae eius dolorem. Enim quos sit, quo libero tempora. Alias quod laudantium aperiam doloremque aliquam, error! Asperiores delectus nostrum, placeat, corporis necessitatibus voluptatem accusamus officia facilis possimus explicabo omnis repudiandae amet commodi facere cupiditate iure deserunt, aliquam tempora! Libero voluptatibus porro necessitatibus ab rerum error nisi suscipit at repellat. Temporibus mollitia omnis labore, dolorum unde dolor consectetur harum aliquam atque doloribus. Quae natus esse aliquam atque illum laborum saepe voluptas adipisci, impedit totam nihil. Laboriosam et praesentium soluta, ducimus, ut molestiae ab aliquid architecto quaerat, similique quo.</p>
         </div>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iure nemo repudiandae veritatis non commodi vitae repellat accusamus necessitatibus. Odio distinctio quos veritatis totam quam dolor, rem magnam aspernatur veniam, deleniti illum, sapiente at libero sequi neque perferendis a laborum! Reprehenderit esse ex at ea molestias quisquam sed vel tenetur nulla?</p>
-    </div>
-    <div class="jumbotron">
-        <h1 class="page-header" style="margin-top: 75px;">Page Heading </h1>
-        <img class="img-responsive" src="img/3.jpg" class="image-in-page" alt="">
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatum ab incidunt sunt, aut asperiores, mollitia omnis quaerat, vel ipsum animi quo repellendus nisi maxime iure tempora hic. Laborum qui voluptates modi, esse dicta perferendis, velit blanditiis ipsa, cum laudantium quae! Ipsam a dolor ad odio, maiores nihil dolorum velit. Aliquid, distinctio, quasi molestiae, nam nesciunt dolorum libero culpa repudiandae nostrum rerum quas. Nulla in tempore temporibus, consectetur aut eum nesciunt laudantium saepe laboriosam alias non aliquam. Repellendus, vero facilis dolorem impedit ipsum corporis, corrupti dignissimos optio, id porro beatae ad consectetur iste, molestias ex mollitia incidunt aliquam. Numquam velit sequi, consectetur quae, odit quos quis architecto recusandae nam voluptatibus at porro dolorem inventore sed. Nemo alias, quaerat in aspernatur rerum cum quis animi est, modi qui placeat id quisquam libero totam laboriosam repellendus voluptas fugit, tempora cumque quidem quasi inventore quibusdam? Voluptas, rem molestias adipisci dicta delectus nesciunt voluptates itaque similique! Et eaque alias, maxime pariatur esse praesentium soluta vero. Aut, odio! Blanditiis saepe optio temporibus eaque beatae officia qui rerum modi, molestias in tempora hic, vel reprehenderit. Dolore id ducimus facilis, quos illo sint, inventore et modi, atque dicta, dignissimos sequi nesciunt cumque officiis! Corporis voluptate quidem temporibus odio.</p>
-    </div>
+        <div class="info">
+          <!-- <div> -->
+            <a href="#" class="vote positive-vote">
+              <i></i>
+              <span>122</span>
+            </a>
+            <a href="#" class="vote negative-vote">
+              <i></i>
+              <span>332</span>
+            </a>
 
+          <!-- </div> -->
 
-</br>
-</br>
-</br>
-</br>
+          <button type="button" class="btn btn-primary" id="show-map">Show map</button>
+          <button type="button" class="btn btn-primary" id="hide-map">Hide map</button>
 
-
-
-
-
-
-
-
-
-
-
-
-
-<hr>
-<!-- Footer -->
-<footer>
-    <div class="row">
-        <div class="col-lg-12">
-            <p>Copyright &copy; Your Website 2014</p>
+          <p>София, Цар Борис III, 136А</p>
+          
+          <div class="created-info">
+            <p>Created by <span class="bold">{username}</span></p>
+            <p>date: <span class="bold">22/7/2015</span></p>
+          </div>
         </div>
+        <div id="map-canvas"></div>
+
+        <!-- 
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iure nemo repudiandae veritatis non commodi vitae repellat accusamus necessitatibus. Odio distinctio quos veritatis totam quam dolor, rem magnam aspernatur veniam, deleniti illum, sapiente at libero sequi neque perferendis a laborum! Reprehenderit esse ex at ea molestias quisquam sed vel tenetur nulla?</p> -->
+
+
+
+
+
+        <!-- <div class="jumbotron">
+            <h1 class="page-header" style="margin-top: 75px;">Page Heading </h1>
+            <img class="img-responsive image-in-page" src="img/3.jpg" alt="">
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatum ab incidunt sunt, aut asperiores, mollitia omnis quaerat, vel ipsum animi quo repellendus nisi maxime iure tempora hic. Laborum qui voluptates modi, esse dicta perferendis, velit blanditiis ipsa, cum laudantium quae! Ipsam a dolor ad odio, maiores nihil dolorum velit. Aliquid, distinctio, quasi molestiae, nam nesciunt dolorum libero culpa repudiandae nostrum rerum quas. Nulla in tempore temporibus, consectetur aut eum nesciunt laudantium saepe laboriosam alias non aliquam. Repellendus, vero facilis dolorem impedit ipsum corporis, corrupti dignissimos optio, id porro beatae ad consectetur iste, molestias ex mollitia incidunt aliquam. Numquam velit sequi, consectetur quae, odit quos quis architecto recusandae nam voluptatibus at porro dolorem inventore sed. Nemo alias, quaerat in aspernatur rerum cum quis animi est, modi qui placeat id quisquam libero totam laboriosam repellendus voluptas fugit, tempora cumque quidem quasi inventore quibusdam? Voluptas, rem molestias adipisci dicta delectus nesciunt voluptates itaque similique! Et eaque alias, maxime pariatur esse praesentium soluta vero. Aut, odio! Blanditiis saepe optio temporibus eaque beatae officia qui rerum modi, molestias in tempora hic, vel reprehenderit. Dolore id ducimus facilis, quos illo sint, inventore et modi, atque dicta, dignissimos sequi nesciunt cumque officiis! Corporis voluptate quidem temporibus odio.</p>
+        </div> -->
+
+
+        <hr>
+        <!-- Footer -->
+        <footer>
+            <div class="row">
+                <div class="col-lg-12">
+                    <p>Copyright &copy; Your Website 2014</p>
+                </div>
+            </div>
+            <!-- /.row -->
+        </footer>
     </div>
-    <!-- /.row -->
-</footer>
-</div>
-<!-- /.container -->
-</div>
+
+
+
+
 </body>
 </html>
 
