--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -240,7 +240,7 @@
         <!-- Pagination -->
         <div class="row text-center">
 
-            <div class="btn-group">
+       <!--      <div class="btn-group">
                 <p class="btn btn-default">Sort</p>
                 <a href="#" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-expanded="false"><span class="caret"></span></a>
                 <ul class="dropdown-menu">
@@ -250,29 +250,28 @@
                     <li class="divider"></li>
                     <li><a href="#">Separated link</a></li>
                 </ul>
-            </div>
-
-            <div class="btn-group">
-                <div class="btn-group">
-                <p class="btn btn-default dropdown-toggle" data-toggle="dropdown" 
-                                                                 aria-expanded="false">
-                    Sort
-                    <span class="caret"></span>
-                </p>
+            </div> -->
 
 
-                <ul class="dropdown-menu">
-                    <li><a href="#">Positive score</a></li>
-                    <li><a href="#">Negative score</a></li>
-                    <li><a href="#">Date</a></li>
-                </ul>
-            </div>
-        </div>
 
 
 
 
             <div class="col-lg-12">
+
+                <div class="btn-group">
+                    <p class="btn btn-default dropdown-toggle" data-toggle="dropdown" 
+                        aria-expanded="false">
+                        Sort
+                        <span class="caret"></span>
+                    </p>
+                    <ul class="dropdown-menu">
+                        <li><a href="#">Positive score</a></li>
+                        <li><a href="#">Negative score</a></li>
+                        <li><a href="#">Date</a></li>
+                    </ul>
+                </div>
+
                 <ul class="pagination">
                     <li>
                         <a href="#">&laquo;</a>
