--- a/WebContent/page.html
+++ b/WebContent/page.html
@@ -6,7 +6,11 @@
     <link href="style/style.css" rel="stylesheet">
     <script type="text/javascript" src="lib/jquery/dist/jquery.js"></script>
     <script type="text/javascript" src="js/script.js"></script>
-    <script src="https://maps.googleapis.com/maps/api/js"></script>
+    <script type="text/javascript" src="js/google.js"></script>
+    <!-- <script src="https://maps.googleapis.com/maps/api/js"></script> -->
+    <script type="text/javascript">
+        document.addEventListener("load", setAddressOnPage());
+    </script>
 </head>
 <body>
     <nav class="navbar navbar-default navbar-fixed-top" role="navigation">
@@ -27,83 +31,6 @@
         </div>
     </nav>
 
-    <div class="container" id="loginform">
-        <div class="row">
-            <div class="col-md-6 col-md-offset-3">
-                <div class="panel panel-login">
-                    <div class="panel-heading">
-                        <div class="row">
-                            <div class="col-xs-6">
-                                <a href="#" class="active" id="login-form-link">Login</a>
-                            </div>
-                            <div class="col-xs-6">
-                                <a href="#" id="register-form-link">Register</a>
-                            </div>
-                        </div>
-                        <hr>
-                    </div>
-                    <div class="panel-body">
-                        <div class="row">
-                            <div class="col-lg-12">
-                                <form id="login-form" action="http://phpoll.com/login/process" method="post" role="form" style="display: block;">
-                                    <div class="form-group">
-                                        <input type="text" name="username" id="username" tabindex="1" class="form-control" placeholder="Username" value="">
-                                    </div>
-                                    <div class="form-group">
-                                        <input type="password" name="password" id="password" tabindex="2" class="form-control" placeholder="Password">
-                                    </div>
-                                    <div class="form-group text-center">
-                                        <input type="checkbox" tabindex="3" class="" name="remember" id="remember">
-                                        <label for="remember"> Remember Me</label>
-                                    </div>
-                                    <div class="form-group">
-                                        <div class="row">
-                                            <div class="col-sm-6 col-sm-offset-3">
-                                                <input type="submit" name="login-submit" id="login-submit" tabindex="4" class="form-control btn btn-login" value="Log In">
-                                            </div>
-                                        </div>
-                                    </div>
-                                    <div class="form-group">
-                                        <div class="row">
-                                            <div class="col-lg-12">
-                                                <div class="text-center">
-                                                    <a href="http://phpoll.com/recover" tabindex="5" class="forgot-password">Forgot Password?</a>
-                                                </div>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </form>
-                                <form id="register-form" action="http://phpoll.com/register/process" method="post" role="form" style="display: none;">
-                                    <div class="form-group">
-                                        <input type="text" name="username" id="username" tabindex="1" class="form-control" placeholder="Username" value="">
-                                    </div>
-                                    <div class="form-group">
-                                        <input type="email" name="email" id="email" tabindex="1" class="form-control" placeholder="Email Address" value="">
-                                    </div>
-                                    <div class="form-group">
-                                        <input type="password" name="password" id="password" tabindex="2" class="form-control" placeholder="Password">
-                                    </div>
-                                    <div class="form-group">
-                                        <input type="password" name="confirm-password" id="confirm-password" tabindex="2" class="form-control" placeholder="Confirm Password">
-                                    </div>
-                                    <div class="form-group">
-                                        <div class="row">
-                                            <div class="col-sm-6 col-sm-offset-3">
-                                                <input type="submit" name="register-submit" id="register-submit" tabindex="4" class="form-control btn btn-register" value="Register Now">
-                                            </div>
-                                        </div>
-                                    </div>
-                                </form>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-    
-
-
     <div class="container">
         <h1 class="page-header" style="margin-top: 75px;"> </h1>
         <div class="row">
@@ -120,9 +47,6 @@
             <span>332</span>
           </a>
 
-          <button type="button" class="btn btn-primary" id="show-map">Show map</button>
-          <button type="button" class="btn btn-primary" id="hide-map">Hide map</button>
-
           <p id="address">address</p>
           
           <div class="created-info">
@@ -130,6 +54,19 @@
             <p>date: <span class="bold">22/7/2015</span></p>
           </div>
         </div>
+         <script>
+          function initialize() {
+            var mapCanvas = document.getElementById('map-canvas');
+            var mapOptions = {
+              center: new google.maps.LatLng(geolocation.lat,geolocation.lng),
+              zoom: 17,
+              mapTypeId: google.maps.MapTypeId.HYBRID
+            };
+            var map = new google.maps.Map(mapCanvas, mapOptions);
+          }
+          google.maps.event.addDomListener(window, 'load', initialize);
+        </script>
+
         <div id="map-canvas"></div>
 
         <hr>
@@ -143,58 +80,5 @@
         </footer>
     </div>
 
-
-
-
 </body>
 </html>
-
-
-
-
-
-
-
-
-
-
-
-
-<!-- 
-<!DOCTYPE html>
-<html>
-  <head>
-    <style>
-      #map-canvas {
-        width: 500px;
-        height: 400px;
-      }
-    </style>
-    <script src="https://maps.googleapis.com/maps/api/js"></script>
-    <script>
-      function initialize() {
-        var mapCanvas = document.getElementById('map-canvas');
-        var mapOptions = {
-          center: new google.maps.LatLng(44.5403, -78.5463),
-          zoom: 8,
-          mapTypeId: google.maps.MapTypeId.ROADMAP
-        }
-        var map = new google.maps.Map(mapCanvas, mapOptions)
-      }
-      google.maps.event.addDomListener(window, 'load', initialize);
-    </script>
-  </head>
-  <body>
-    <div id="map-canvas"></div>
-  </body>
-</html>
--->
-
-
-
-
-
-
-
-
-
