--- a/WebContent/page.html
+++ b/WebContent/page.html
@@ -25,8 +25,7 @@
             </div>
 
             <ul class="nav navbar-nav navbar-right">
-                <li><a href="#" id="register">Register</a></li>
-                <li><a href="#" id="login">Lorign</a></li>
+                <li><a href="/snaptown/logout" id="logout">Logout</a></li>
             </ul>
         </div>
     </nav>
